# tree-sitter-BluespecSystemVerilog

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bsv/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterBsvTests/: TreeSitterBsvTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: BSV_comments.txt  BSV_empty_package.txt  BSV_identifiers.txt  BSV_interface_declaration.txt  BSV_method_definition.txt  BSV_simple_function_definition.txt  BSV_temp.txt  BSV_typeclass.txt  BSV_typedef.txt  BSV_variable_assignment.txt  BSV_variable_declaration.txt
test/corpus/expression/: BSV_action.txt  BSV_bit.txt  BSV_literals.txt  BSV_struct_and_union.txt
test/corpus/module/: BSV_module_definition.txt  BSV_short_form_module_instantiation.txt  BSV_simple_module_definition.txt
